<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_numero_nacional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_nacional"
        android:textAppearance="@style/texto_normal"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="85dp" />

    <TextView
        android:id="@+id/tv_pokemon_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokemon_nombre"
        android:textAppearance="@style/pokemon_principal_name"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="38dp" />

    <ImageView
        android:id="@+id/iv_pokeball"
        android:layout_width="295dp"
        android:layout_height="247dp"
        app:srcCompat="@drawable/pokeball"
        tools:layout_editor_absoluteX="211dp"
        tools:layout_editor_absoluteY="88dp" />

    <ImageView
        android:id="@+id/iv_star"
        android:layout_width="63dp"
        android:layout_height="73dp"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:layout_editor_absoluteX="349dp"
        tools:layout_editor_absoluteY="8dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="186dp"
        android:layout_height="284dp"
        android:visibility="visible"
        app:srcCompat="@drawable/audino"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="105dp" />

    <TextView
        android:id="@+id/tv_tipo_pokemon"
        android:layout_width="81dp"
        android:layout_height="21dp"
        android:background="@drawable/background_tipo_pokemon"
        android:text="@string/tipo"
        android:textAlignment="center"
        android:textAppearance="@style/highlighted_text"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="352dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habilidad_t"
        android:textAlignment="center"
        android:textAppearance="@style/titulo_principal"
        tools:layout_editor_absoluteX="251dp"
        tools:layout_editor_absoluteY="416dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peso_t"
        android:textAlignment="center"
        android:textAppearance="@style/titulo_principal"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="465dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altura_t"
        android:textAlignment="center"
        android:textAppearance="@style/titulo_principal"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="412dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peso"
        android:textAlignment="center"
        android:textAppearance="@style/texto_normal"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="469dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habilidad"
        android:textAlignment="center"
        android:textAppearance="@style/texto_normal"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        tools:layout_editor_absoluteY="469dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altura"
        android:textAlignment="center"
        android:textAppearance="@style/texto_normal"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="416dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="339dp"
        android:layout_height="156dp"
        android:text="@string/descripcion"
        android:textAppearance="@style/texto_parrafo"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="534dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="99dp"
        android:layout_height="101dp"
        app:srcCompat="@drawable/riolu"
        tools:layout_editor_absoluteX="277dp"
        tools:layout_editor_absoluteY="761dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_pkm3"
        android:textAppearance="@style/letra_peque"
        tools:layout_editor_absoluteX="296dp"
        tools:layout_editor_absoluteY="865dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="99dp"
        android:layout_height="101dp"
        app:srcCompat="@drawable/tepig"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="761dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_pkm2"
        android:textAppearance="@style/letra_peque"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="865dp" />

</androidx.constraintlayout.widget.ConstraintLayout>